# eprofiler-tui

./: .gitmodules  Cargo.toml  Containerfile  README.md  build.rs
.github/workflows/: release.yaml  test.yaml
examples/: sleep_pattern.rs
proto/: build.rs
src/: error.rs  flamegraph.rs  grpc.rs  main.rs  proto.rs  storage.rs  symbolizer.rs
src/debug/: ui.rs
src/tui/: event.rs  flamescope_layout.rs  mod.rs  state.rs  ui.rs
src/tui/state/: executables.rs  flamegraph.rs  flamescope.rs  mod.rs
