[package]
name = "eprofiler-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
better-panic = "0.3"
clap = { version = "4.5.57", features = ["derive"] }
prost = "0.13"
ratatui = "0.29"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.12", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.12"
